Wire up Project References

--- a/TripTracker/TripTracker/TripTracker.csproj
+++ b/TripTracker/TripTracker/TripTracker.csproj
@@ -6,4 +6,8 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
