--- a/TripTracker/UnitTests/UnitTests.csproj
+++ b/TripTracker/UnitTests/UnitTests.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+    <ProjectReference Include="..\TripTracker\TripTracker.csproj" />
+  </ItemGroup>
+
 </Project>
