Wire up Reporting and FullSystem Test

--- a/TripTracker/TripTracker/TripTracker.csproj
+++ b/TripTracker/TripTracker/TripTracker.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
